--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="quiz app" src="/static/img/OS-Image.JPEG" style="height: 100%; width: 100%" class="activator" />
+                <img alt="quiz app" src="/static/img/OS-Image.jpeg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Operating Systems<i
