Replaced software developer with computer engineer

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Carl Maalouli | Software Engineer" />
-  <meta property="og:description" content="Software Developer" />
+  <meta property="og:title" content="Carl Maalouli | Computer Engineer" />
+  <meta property="og:description" content="Computer Engineer" />
   <meta property="og:url" content="https://karlitto01.github.io/" />
-  <meta property="og:site_name" content="Carl Maalouli | Software Engineer" />
+  <meta property="og:site_name" content="Carl Maalouli | Computer Engineer" />
   <meta property="article:publisher" content="https://karlitto01github.io/" />
   <meta property="og:image" content="https://karlitto01.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@carl_maalouli" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
+  <meta name="twitter:description" content="Computer Engineer" />
   <meta name="twitter:url" content="https://twitter.com/carl_maalouli" />
   <meta name="author" content="Carl Maalouli" />
-  <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
+  <meta name="description" content="Computer engineer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/static/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/static/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/static/img/favicon/apple-icon-72x72.png" />
@@ -159,7 +159,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Carl
-        Maalouli</a><span class="black-text">Software Developer</span>
+        Maalouli</a><span class="black-text">Computer Engineer</span>
     </div>
   </nav>
 
