--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
   <!-- Nav class 3 -->
   <nav class="hide-on-large only">
     <ul id="slide-out" class="side-nav">
+      <li class="logo">
+        <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
+          class="brand-logo grey-blue-text">
+          <img src="/static/img/profile-photo.png" class="circle img-responsive profile-pic" alt="avatar">
+        </a>
+      </li>
       <li class="bold">
         <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
@@ -329,7 +335,7 @@
               </li>
               <li>Cooperated with other students at ECCC on the development of an internal tracking and management tool for ECCC applications.</li>
               <li>
-                <b>Tools:</b> C#, HTML/CSS, JavaScript, .NET, SQL, Azure, Flask
+                <b>Tools:</b> C#, HTML/CSS, JavaScript, .NET, SQL, Azure
               </li>
             </ul>
           </div>
