--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/static/css/style.css" />
-  <title>Carl Maalouli | Software Engineer</title>
+  <title>Carl Maalouli | Computer Engineer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -84,25 +84,25 @@
 
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
-          class="brand-logo grey-blue-text">
+          class="brand-logo intro-color-text">
           <img src="/static/img/profile-photo.png" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
       <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark blue-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
-          class="waves-effect waves-dark teal-text"><i
+          class="waves-effect waves-dark blue-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
       </li>
 
       <li class="bold">
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
-        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark blue-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
 
@@ -113,7 +113,7 @@
         mdi-social-poll
         mdi-av-equalizer
         -->
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark blue-text"><i
             class="mdi-action-assessment small"></i><span>Skills</span></a>
       </li>
       
@@ -121,7 +121,7 @@
         <!--
         ICONS:
         -->
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark blue-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
       </li>
 
@@ -131,7 +131,7 @@
         2. mdi-content-mail
         3. mdi-communication-email
         -->
-        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark blue-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
 
@@ -146,9 +146,9 @@
         -->
         <!-- <a aria-label="Open Carl's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
+          class="waves-effect waves-dark blue-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
         <a aria-label="Open Carl's resume in a new tab" href="https://karlitto01.github.io/static/resume/Carl_Maalouli_Resume.pdf" target="_blank"
-        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
+        class="waves-effect waves-dark blue-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
   </nav>
@@ -158,7 +158,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Carl
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="blue-text">Carl
         Maalouli</a><span class="black-text">Computer Engineer</span>
     </div>
   </nav>
@@ -167,35 +167,35 @@
   <nav class="hide-on-large only">
     <ul id="slide-out" class="side-nav">
       <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark blue-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
-          class="waves-effect waves-dark teal-text"><i
+          class="waves-effect waves-dark blue-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark blue-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark blue-text"><i
             class="mdi-action-assessment small"></i><span>Skills</span></a>
       </li>
 
       <li class="bold">
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark blue-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark blue-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
         <a aria-label="Open Carl's Resume in a new tab"
           href="/static/resume/Carl_Maalouli_Resume.pdf" target="_blank"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
+          class="waves-effect waves-dark blue-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
   </nav>
@@ -209,7 +209,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Carl Maalouli.</span></h2>
+              <h2>Hi, I'm <span class="blue rounded">Carl Maalouli.</span></h2>
               <br>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
@@ -253,7 +253,7 @@
 
     <!-- Second Section: About -->
     <section id="about" class="section scrollspy">
-      <h3 class="page-title white-text teal">About</h3>
+      <h3 class="page-title white-text blue">About</h3>
       <div class="container flow-text">
         <!-- <blockquote>
           <h2>
@@ -300,7 +300,7 @@
 
     <!-- Third Section: Experience -->
     <section id="experience" class="section scrollspy">
-      <h3 class="page-title white-text teal">Experience</h3>
+      <h3 class="page-title white-text blue">Experience</h3>
       <div class="container">
 
         <!-- Latest Experience -->
@@ -315,7 +315,7 @@
               <div class="col s12 m9">
                 <p>
                   <span class="card-title"><a href="https://www.canada.ca/en/environment-climate-change.html" target="_blank"
-                      class="teal-text hoverline">Environment and Climate Change Canada</a></span>
+                      class="blue-text hoverline">Environment and Climate Change Canada</a></span>
                 </p>
               </div>
             </div>
@@ -342,7 +342,7 @@
 
     <!-- Fourth Section: Projects -->
     <section id="projects" class="section scrollspy">
-      <h3 class="page-title white-text teal">Projects</h3>
+      <h3 class="page-title white-text blue">Projects</h3>
       <div class="container">
         <div class="row">
 
@@ -352,7 +352,7 @@
                 <img alt="Screenshot of  web app" src="/static/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Machine Learning | Object Detection<i
+                <span class="card-title activator blue-text hoverline">Machine Learning | Object Detection<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   A human counter
@@ -370,11 +370,11 @@
                 <!-- <div class="card-action">
                   <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
                     data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                    class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
                       class="fa fa-external-link"></i></a>
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/karlitto01/music-player"
                     target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                    class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
                       class="fa fa-github"></i></a>
                 </div> -->
               </div>
@@ -387,7 +387,7 @@
                 <img alt="quiz app" src="/static/img/OS-Image.jpeg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Operating Systems<i
+                <span class="card-title activator blue-text hoverline">Operating Systems<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   A custom operating system
@@ -405,11 +405,11 @@
                 <!-- <div class="card-action">
                   <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
                     data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                    class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
                       class="fa fa-external-link"></i></a>
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/carlmaalouli/QuizUp"
                     target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                    class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
                       class="fa fa-github"></i></a>
                 </div> -->
               </div>
@@ -422,7 +422,7 @@
                 <img alt="Screenshot of  web app" src="/static/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">ARM Processor Open Software<i
+                <span class="card-title activator blue-text hoverline">ARM Processor Open Software<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   The game "Breakout" on an ARM processor
@@ -440,7 +440,7 @@
                 <!-- <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/carlmaalouli/"
                     target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                    class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
                       class="fa fa-github"></i></a>
                 </div> -->
               </div>
@@ -453,7 +453,7 @@
                 <img alt="quiz app" src="/static/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Software Communication and Design<i
+                <span class="card-title activator blue-text hoverline">Software Communication and Design<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   A city mapping software
@@ -471,7 +471,7 @@
                 <!-- <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/carlmaalouli/"
                     target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                    class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
                       class="fa fa-github"></i></a>
                 </div> -->
               </div>
@@ -486,7 +486,7 @@
 
     <!-- Fifth Section: Skills -->
     <section id="skills" class="section scrollspy">
-      <h3 class="page-title white-text teal">Skills</h3>
+      <h3 class="page-title white-text blue">Skills</h3>
       <div class="container">
         <!-- Languages and Databases -->
         <div class="card">
@@ -598,7 +598,7 @@
                         <img src="/static/img/mooc-machine-learning-coursera-800x500.jpg">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Machine Learning (Stanford)</span>
+                        <span class="card-title blue-text">Machine Learning (Stanford)</span>
                       </div>
                     </div>
                   </div>
@@ -609,7 +609,7 @@
                         <img src="/static/img/mooc-algorithms-stanford-2-800x500.jpg">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Algorithms (Stanford)</span>
+                        <span class="card-title blue-text">Algorithms (Stanford)</span>
                       </div>
                     </div>
                   </div>
@@ -624,7 +624,7 @@
 
     <!-- Seventh Section: Education -->
     <section id="education" class="section scrollspy">
-      <h3 class="page-title white-text teal">Education</h3>
+      <h3 class="page-title white-text blue">Education</h3>
       <div class="container">
         <div class="row">
           <!-- Education -->
@@ -632,7 +632,7 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="teal-text hoverline">University of Toronto</a></span>
+                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="blue-text hoverline">University of Toronto</a></span>
                 </p>
                 <p class="brown-text">Toronto, Ontario, Canada</p>
                 <p>
@@ -677,30 +677,30 @@
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
-      <h3 class="page-title white-text teal">Contact</h3>
+      <h3 class="page-title white-text blue">Contact</h3>
       <div class="container">
         <p>
           <a aria-label="Call Carl" data-position="top" data-tooltip="Call Carl"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
+            class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i class="fa fa-phone"></i><a
               aria-label="Call Carl">+1 (437) 388-3686</a></a>
         </p>
         <p>
           <a aria-label="Email Carl" href="mailto:carl.maalouli@outlook.com" target="_blank" data-position="top"
-            data-tooltip="Email Carl" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+            data-tooltip="Email Carl" class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
               class="fa fa-envelope"></i><a aria-label="Email Carl" href="mailto:carl.maalouli@outlook.com"
               class="hoverline">carl.maalouli@outlook.com</a></a>
         </p>
         <p>
           <a aria-label="View Carl on GitHub" href="http://github.com/karlitto01" target="_blank"
             data-position="top" data-tooltip="View Carl on GitHub"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
+            class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i class="fa fa-github"></i><a
               aria-label="Carl on Github" href="http://github.com/karlitto01" class="hoverline"
               target="_blank">github.com/karlitto01</a></a>
         </p>
         <p>
           <a aria-label="View Carl on LinkedIn" href="http://linkedin.com/in/carlmaa" target="_blank"
             data-position="top" data-tooltip="View Carl on LinkedIn"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+            class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
               class="fa fa-linkedin"></i><a aria-label="Carl on LinkedIn" href="http://linkedin.com/in/carlmaa"
               class="hoverline" target="_blank">linkedin.com/in/carlmaa</a></a>
         </p>
