--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <meta property="og:url" content="https://karlitto01.github.io/" />
   <meta property="og:site_name" content="Carl Maalouli | Computer Engineer" />
   <meta property="article:publisher" content="https://karlitto01github.io/" />
-  <meta property="og:image" content="https://karlitto01.github.io/examples/preview.JPG" />
+  <meta property="og:image" content="https://karlitto01.github.io/examples/preview.png" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@carl_maalouli" />
