--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark blue-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
+      
+      <li class="bold">
+        <!-- 
+        1. mdi-communication-contacts
+        2. mdi-content-mail
+        3. mdi-communication-email
+        -->
+        <a aria-label="Navigate to the Places Travelled section" href="#map" class="waves-effect waves-dark blue-text"><i
+            class="mdi-maps-map small"></i><span>Places Travelled</span></a>
+      </li>
 
       <li class="bold">
         <!--
@@ -191,6 +201,10 @@
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark blue-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Places Travelled section" href="#map" class="waves-effect waves-dark blue-text"><i
+            class="mdi-maps-map small"></i><span>Places Travelled</span></a>
       </li>
       <li class="bold">
         <a aria-label="Open Carl's Resume in a new tab"
@@ -676,7 +690,7 @@
     </section>
 
     <!-- Eight Section: Contact -->
-    <section id="contact" class="section scrollspy full-height">
+    <section id="contact" class="section scrollspy">
       <h3 class="page-title white-text blue">Contact</h3>
       <div class="container">
         <p>
@@ -704,6 +718,17 @@
               class="fa fa-linkedin"></i><a aria-label="Carl on LinkedIn" href="http://linkedin.com/in/carlmaa"
               class="hoverline" target="_blank">linkedin.com/in/carlmaa</a></a>
         </p>
+      </div>
+    </section>
+
+    <section id="map" class="section scrollspy full-height">
+      <h3 class="page-title white-text blue">Places Travelled</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <iframe src="https://www.google.com/maps/d/embed?mid=1jBX4W7p-9AQ5NdZ_RMAasNuU6CnC1I0&ehbc=2E312F&noprof=1&callback=Function.prototype" width="100%" height="520"></iframe>
+          </div>
+        </div>
       </div>
     </section>
   </main>
