--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
       <div class="container">
         <p>
           <a aria-label="Call Carl" data-position="top" data-tooltip="Call Carl"
-            class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i class="fa fa-phone"></i><a
+            class="btn-floating btn-large waves-effect waves-light intro-color tooltipped" href="tel:+14373883686" ><i class="fa fa-phone"></i><a
               aria-label="Call Carl" href="tel:+14373883686" target="_blank" data-position="top" data-tooltip="Call Carl" class="hoverline waves-effect waves-light tooltipped">+1 (437) 388-3686</a></a>
         </p>
         <p>
