Mobile accessibility issue fixed

--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
   <!-- Nav class 3 -->
   <nav class="hide-on-large only">
     <ul id="slide-out" class="side-nav">
+      <li class="logo  image-container">
+        <a  aria-label="Navigate to the beginning of the page" href="#intro"
+          class="intro-color-text">
+          <img src="/static/img/profile-photo2.jpg" class=" img-responsive responsive-image" alt="avatar">
+        </a>
+      </li>
       <li class="bold">
         <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark blue-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
@@ -173,7 +179,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="blue rounded">Carl Maalouli.</span></h2>
+              <h2>Hi, I'm <span class="blue rounded">Carl Maalouli</span>!</h2>
               <br>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
@@ -652,36 +658,54 @@
     <br />
     
 
-    <!-- Eight Section: Contact -->
-    <section id="contact" class="section scrollspy">
-      <h3 class="page-title white-text blue">Contact</h3>
-      <div class="container">
-        <p>
-          <a aria-label="Call Carl" data-position="top" data-tooltip="Call Carl"
-            class="btn-floating btn-large waves-effect waves-light intro-color tooltipped" href="tel:+14373883686" ><i class="fa fa-phone"></i><a
-              aria-label="Call Carl" href="tel:+14373883686" target="_blank" data-position="top" data-tooltip="Call Carl" class="hoverline waves-effect waves-light tooltipped">+1 (437) 388-3686</a></a>
-        </p>
-        <p>
-          <a aria-label="Email Carl" href="mailto:carl.maalouli@outlook.com" target="_blank" data-position="top"
-            data-tooltip="Email Carl" class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Carl" href="mailto:carl.maalouli@outlook.com"
-              target="_blank" data-position="top" data-tooltip="Email Carl" class="hoverline waves-effect waves-light tooltipped">carl.maalouli@outlook.com</a></a>
-        </p>
-        <p>
-          <a aria-label="View Carl on GitHub" href="http://github.com/karlitto01" target="_blank"
-            data-position="top" data-tooltip="View Carl on GitHub"
-            class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Carl on Github" href="http://github.com/karlitto01" target="_blank" data-position="top" data-tooltip="View Carl on GitHub" class="hoverline waves-effect waves-light tooltipped">github.com/karlitto01</a></a>
-        </p>
-        <p>
-          <a aria-label="View Carl on LinkedIn" href="http://linkedin.com/in/carlmaa" target="_blank"
-            data-position="top" data-tooltip="View Carl on LinkedIn"
-            class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Carl on LinkedIn" href="http://linkedin.com/in/carlmaa"
-              target="_blank" data-position="top" data-tooltip="View Carl on LinkedIn" class="hoverline waves-effect waves-light tooltipped">linkedin.com/in/carlmaa</a></a>
-        </p>
-      </div>
-    </section>
+<!-- Eight Section: Contact -->
+<section id="contact" class="section scrollspy">
+  <h3 class="page-title white-text blue">Contact</h3>
+  <div class="container">
+    <p>
+      <a aria-label="Call Carl" href="tel:+14373883686" target="_blank" data-position="top" 
+        data-tooltip="Call Carl" class="btn-floating btn-large waves-effect waves-light intro-color tooltipped">
+        <i class="fa fa-phone"></i>
+      </a>
+      <a aria-label="Call Carl" href="tel:+14373883686" target="_blank" data-position="top" 
+        data-tooltip="Call Carl" class="hoverline waves-effect waves-light tooltipped">
+        +1 (437) 388-3686
+      </a>
+    </p>
+    <p>
+      <a aria-label="Email Carl" href="mailto:carl.maalouli@outlook.com" target="_blank" data-position="top"
+        data-tooltip="Email Carl" class="btn-floating btn-large waves-effect waves-light intro-color tooltipped">
+        <i class="fa fa-envelope"></i>
+      </a>
+      <a aria-label="Email Carl" href="mailto:carl.maalouli@outlook.com" target="_blank" data-position="top" 
+        data-tooltip="Email Carl" class="hoverline waves-effect waves-light tooltipped">
+        carl.maalouli@outlook.com
+      </a>
+    </p>
+    <p>
+      <a aria-label="View Carl on GitHub" href="http://github.com/karlitto01" target="_blank" data-position="top" 
+        data-tooltip="View Carl on GitHub" class="btn-floating btn-large waves-effect waves-light intro-color tooltipped">
+        <i class="fa fa-github"></i>
+      </a>
+      <a aria-label="Carl on GitHub" href="http://github.com/karlitto01" target="_blank" data-position="top" 
+        data-tooltip="View Carl on GitHub" class="hoverline waves-effect waves-light tooltipped">
+        github.com/karlitto01
+      </a>
+    </p>
+    <p>
+      <a aria-label="View Carl on LinkedIn" href="http://linkedin.com/in/carlmaa" target="_blank" data-position="top"
+        data-tooltip="View Carl on LinkedIn" class="btn-floating btn-large waves-effect waves-light intro-color tooltipped">
+        <i class="fa fa-linkedin"></i>
+      </a>
+      <a aria-label="Carl on LinkedIn" href="http://linkedin.com/in/carlmaa" target="_blank" data-position="top" 
+        data-tooltip="View Carl on LinkedIn" class="hoverline waves-effect waves-light tooltipped">
+        linkedin.com/in/carlmaa
+      </a>
+    </p>
+    <br />
+  </div>
+</section>
+
 
     <!-- <section id="map" class="section scrollspy full-height">
       <h3 class="page-title white-text blue">Places Travelled</h3>
