--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
   <!-- Nav class 3 -->
   <nav class="hide-on-large only">
     <ul id="slide-out" class="side-nav">
-      <li class="logo  image-container">
+      <li class="image-container">
         <a  aria-label="Navigate to the beginning of the page" href="#intro"
           class="intro-color-text">
-          <img src="/static/img/profile-photo2.jpg" class=" img-responsive responsive-image" alt="avatar">
+          <img src="/static/img/profile-photo2.jpg" class=" responsive-image" alt="avatar">
         </a>
       </li>
       <li class="bold">
