Fixed consistency of cards across page

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           </h2>
         </blockquote>        
         <p>
-          I am graduating from the University of Toronto in June, 2024 with a <b>BASc in Computer Engineering</b> and a <b>minor in AI</b>. My skills include AI/ML, C/C++/C#, Python, SQL, Flask, .NET, Azure, HTML/CSS, JavaScript, computer networks, and computer security. During my 16-month co-op at Environment and Climate Change Canada, I developed secure web applications using C#, JavaScript, ASP.NET, Blazor, and Azure. </p>
+          I am graduating from the University of Toronto in June, 2024 with a <b>BASc in Computer Engineering</b> and a <b>minor in Artificial Intelligence</b>. My skills include AI/ML, C/C++/C#, Python, SQL, Flask, .NET, Azure, HTML/CSS, JavaScript, computer networks, and computer security. During my 16-month co-op at Environment and Climate Change Canada, I developed secure web applications using C#, JavaScript, ASP.NET, Blazor, and Azure. </p>
           <p>
             I am passionate about solving real-world problems through technology, focusing on AI, software development, and cybersecurity.         </p>
           </p>
@@ -279,12 +279,12 @@
           <div class="col sm12 m12">
             <div class="card">
               <div class="card-content">
-                <div class="row" style="margin-top:-24px;">
+                <div class="row" style="margin-top:-34px;">
                 <a href="https://www.utoronto.ca/" target="_blank">
                   <img alt="UofT logo" src="/static/img/uoft.png" class="logo-img responsive-img" />
                 </a>
                 <p>
-                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="blue-text hoverline responsive-break">University of Toronto &nbsp;<br class="break-on-small">| St. George Campus</a></span>
+                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="blue-text hoverline responsive-break"><b>University of Toronto</b> &nbsp;<br class="break-on-small">| St. George Campus</a></span>
                 </p>
                 
                 <p>
@@ -340,14 +340,17 @@
         <!-- Latest Experience -->
         <div class="card">
           <div class="card-content">
-            <div class="row">
-              <div style="margin-top:20px;" class="col custom-col">
-                <a href="https://www.canada.ca/en/environment-climate-change.html" target="_blank"><img alt="ECCC logo"
-                    src="/static/img/Environment_and_Climate_Change_Canada_logo.svg.png" class="responsive-img center-block" /></a>
-              </div>
+            <div class="row" style="margin-top:-34px;">
+                <a id="eccc-link1" href="https://www.canada.ca/en/environment-climate-change.html" target="_blank"><img alt="ECCC logo"
+                    src="/static/img/eccc_bilingual_stacked.png"  class="eccc-img responsive-img" /></a>
+                    <a id="eccc-link2" href="https://www.canada.ca/en/environment-climate-change.html" target="_blank"><img alt="ECCC logo"
+                      src="/static/img/Environment_and_Climate_Change_Canada_logo.svg.png"  class="eccc-img responsive-img" /></a>
               <!-- <div class="col s12 m9"> -->
-            </div>
-            <div class="role brown-text text-darken-2 responsive-break">.NET Applications <br class="break-on-smaller">Developer</div>
+            
+                <p><span class="card-title blue-text responsive-break"><b>.NET APPLICATIONS DEVELOPER</b> &nbsp;<br class="break-on-medium"> | <a href="https://www.canada.ca/en.html" target="_blank" class="blue-text hoverline">Government of Canada</a></span></p>
+                <p><b>Duration:</b> 16 months
+                <p><b>Department:</b> Environment and Climate Change Canada
+              </div>
             <ul>
               <li>
                 Worked on a greenfield project to explore the development of <strong>cloud based applications</strong> at ECCC: 
