--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
               </div>
                 <ul>
                   <p>
-                    <b>Relevant Courseworks:</b>
+                    <b>Relevant Coursework:</b>
                   </p>
                   <p>
-                  <ul style="display: grid; grid-template-columns: repeat(2, 1fr);">
+                  <ul id="coursework">
                     <li>Algorithms and Data Structures</li>
                     <li>Operating Systems</li>
                     <li>Software Engineering</li>
@@ -347,7 +347,7 @@
                       src="/static/img/Environment_and_Climate_Change_Canada_logo.svg.png"  class="eccc-img responsive-img" /></a>
               <!-- <div class="col s12 m9"> -->
             
-                <p><span class="card-title blue-text responsive-break"><b>.NET APPLICATIONS DEVELOPER</b> &nbsp;<br class="break-on-medium">| <a href="https://www.canada.ca/en.html" target="_blank" class="blue-text hoverline">Government of Canada</a></span></p>
+                <p><span class="card-title blue-text responsive-break"><b>.NET APPLICATION DEVELOPER</b> &nbsp;<br class="break-on-medium">| <a href="https://www.canada.ca/en.html" target="_blank" class="blue-text hoverline">Government of Canada</a></span></p>
                 <p><b>Duration:</b> 16 months
                 <p><b>Department:</b> Environment and Climate Change Canada
               </div>
