Complete working 1st version

--- a/index.html
+++ b/index.html
@@ -381,28 +381,32 @@
       <h3 class="page-title white-text blue">Projects</h3>
       <div class="container">
         <div class="row">
-
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/static/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/static/img/capstone.webp" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text hoverline">Machine Learning | Object Detection<i
+                <span class="card-title activator blue-text"><b>Machine Learning</b> &nbsp;| Financial Report Analysis<i
                     class="mdi-navigation-more-vert right"></i></span>
-                <p>
-                  A human counter
+                <p class="hoverpointer activator">
+                  An AI financial expert (tap/click for more).
                 </p>
               </div>
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text"><small>Accomplishments</small><i
+                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
                     class="mdi-navigation-close right"></i></span>
                     <ul>
-                      <li>Designed and developed an object detection machine learning model and integrated it into a
-                        program that counts the number of people in a room via video feed, aiding in enforcing
-                        capacity limits during the Covid-19 pandemic.</li>
+                      <li>Developed a comprehensive financial database using <b>Python</b> and <b>SQL</b>, which streamlined
+                        data retrieval processes for public company filings.
+                        </li>
+                        <li>Created custom tools for data exchange between DB and <b>Large Language Models (LLMs)</b>.</li>
+                        <li>Leveraged open-sourced LLMs (GPT-4) and LLM frameworks <b>(LangChain)</b>, along with <b>prompt
+                          engineering</b> methods, to analyze filings accurately.</li>
+                        <li>Designed and implemented a modern <b>web app with a chat-based UI</b> that exposes the LLM
+                          agent to end-users looking to ask questions.</li>
                     </ul>
                 <!-- <div class="card-action">
                   <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
@@ -424,20 +428,28 @@
                 <img alt="quiz app" src="/static/img/OS-Image.jpeg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text hoverline">Operating Systems<i
+                <span class="card-title activator blue-text"><b>Web Application</b> &nbsp;| Event & RSVP Management<i
                     class="mdi-navigation-more-vert right"></i></span>
-                <p>
+                <p class="hoverpointer activator">
                   A custom operating system
                 </p>
               </div>
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
+                  class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Implemented part of an operating system</li>
-                  <li>Worked with operating system structures, concurrency, synchronization, deadlock, CPU scheduling, memory management, and file systems</li>
+                  <li>Developed and deployed a Flask-based web application to manage events and track RSVPs,
+                    enhancing event planning efficiency and user communication.
+                    </li>
+                  <li>Technologies Used: <b>Flask</b>, <b>Python</b>, <b>JavaScript</b>, <b>HTML</b>, <b>Bootstrap</b>, <b>SQL</b>, <b>Docker</b>, <b>GitHub
+                    Organization</b>.</li>
+                  <li>Employed <b>Agile</b> methodologies with <b>Scrum</b>, planning tasks using <b>sprints</b>.</li>
+                  <li>Served as Software Lead in a team of seven students, designing the <b>software architecture</b>,
+                    overseeing development, designing and developing new components, and coordinating team
+                    tasks using GitHub for version control.
+                    </li>
                 </ul>
                 <!-- <div class="card-action">
                   <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
@@ -453,23 +465,62 @@
             </div>
           </div>
 
+
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of  web app" src="/static/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator blue-text"><b>Machine Learning</b> &nbsp;| Object Detection<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p class="hoverpointer activator">
+                  A human counter
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
+                  class="mdi-navigation-close right"></i></span>
+                    <ul>
+                      <li>Designed and developed a <b>human detection</b> machine learning model.</li>
+                      <li> Integrated the 'human detector' into a program that counts the number of people in a room via video feed, aiding in enforcing
+                        capacity limits during the Covid-19 pandemic.</li>
+                    </ul>
+                <!-- <div class="card-action">
+                  <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/karlitto01/music-player"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light intro-color tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+         
+
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/static/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text hoverline">ARM Processor Open Software<i
+                <span class="card-title activator blue-text"><b>Hardware</b> &nbsp;| ARM Processor Open Software<i
                     class="mdi-navigation-more-vert right"></i></span>
-                <p>
+                <p class="hoverpointer activator">
                   The game "Breakout" on an ARM processor
                 </p>
               </div>
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title brown-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
+                  class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li>Created a version of the game ”Breakout” using C and Assembly Language for the ARM processor, using CPUlator as the development environment.</li>
 
@@ -490,20 +541,20 @@
                 <img alt="quiz app" src="/static/img/map.webp" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text hoverline">Interactive City Mapping Software<i
+                <span class="card-title activator blue-text"><b>Native Application</b> &nbsp;| Interactive City Mapping Software<i
                     class="mdi-navigation-more-vert right"></i></span>
-                <p>
+                <p class="hoverpointer activator">
                   For Linux systems
                 </p>
               </div>
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title brown-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
+                  class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li> Collaborated with a team of three engineering students to develop an interactive city mapping software for Linux/Unix using C++</li>
-                  <li>Implemented algorithms for efficient path finding, including Dijkstra’s, A* Heuristic, and Multi-Start</li>
+                  <li> Collaborated with a team of three engineering students to develop an interactive city mapping software for <b>Linux/Unix</b> using <b>C++</b>.</li>
+                  <li>Implemented <b>algorithms</b> for efficient path finding, including Dijkstra’s, A* Heuristic, and Multi-Start</li>
                 </ul>
                 <!-- <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/carlmaalouli/"
@@ -662,12 +713,15 @@
         <!-- Other -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Other Tools</h4>
+            <h4 class="brown-text light">Other Skills</h4>
             <div class="row text-center">
 
 
               <div class="col s4 m2">
                 <img alt="" src="/static/img/git.png" class="responsive-img" />Git
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/static/img/api.png" class="responsive-img" />Rest APIs
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/static/img/Microsoft_Azure.svg.png" class="responsive-img" />Azure Cloud
@@ -679,13 +733,16 @@
                 <img alt="" src="/static/img/docker.svg" class="responsive-img" />Docker
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/static/img/Quartus-Prime.png" class="responsive-img" />Quartus Prime
-              </div>
-              <div class="col s4 m2">
                 <img alt="" src="/static/img/latex.png" class="responsive-img" />LaTeX
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/static/img/ms365.png" class="responsive-img" />MS 365
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/static/img/Quartus-Prime.png" class="responsive-img" />Quartus Prime
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/static/img/os.png" class="responsive-img" />Operating Systems
               </div>
             </div>
             <div class="row" style="padding-left: 10px;">
@@ -829,6 +886,7 @@
         closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
       })
     })
+    
   </script>
 </body>
 
