--- a/index.html
+++ b/index.html
@@ -428,10 +428,10 @@
                 <img alt="quiz app" src="/static/img/OS-Image.jpeg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b>Web Application</b> &nbsp;| Event & RSVP Management<i
+                <span class="card-title activator blue-text"><b>Web App</b> &nbsp;| Event & RSVP Management<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
-                  A custom operating system
+                  A modern web app (tap/click for more).
                 </p>
               </div>
               <div class="card-reveal">
@@ -475,7 +475,7 @@
                 <span class="card-title activator blue-text"><b>Machine Learning</b> &nbsp;| Object Detection<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
-                  A human counter
+                  An AI human counter (tap/click for more).
                 </p>
               </div>
               <div class="card-reveal">
@@ -510,10 +510,9 @@
                 <img alt="Screenshot of  web app" src="/static/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b>Hardware</b> &nbsp;| ARM Processor Open Software<i
+                <span class="card-title activator blue-text"><b>Hardware</b> &nbsp;| ARM Open Software<i
                     class="mdi-navigation-more-vert right"></i></span>
-                <p class="hoverpointer activator">
-                  The game "Breakout" on an ARM processor
+                <p class="hoverpointer activator">"Breakout" on ARM (tap/click for more).
                 </p>
               </div>
               <div class="card-reveal">
@@ -522,7 +521,8 @@
                 <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
                   class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Created a version of the game ”Breakout” using C and Assembly Language for the ARM processor, using CPUlator as the development environment.</li>
+                  <li>Created a version of the game ”Breakout” using <b>C</b> and <b>ARM Assembly Language</b> for the ARM processor.</li>
+                  <li>Used CPUlator as the virtual development environment due to Covid-19 restrictions.</li>
 
                 </ul>
                 <!-- <div class="card-action">
@@ -541,10 +541,10 @@
                 <img alt="quiz app" src="/static/img/map.webp" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b>Native Application</b> &nbsp;| Interactive City Mapping Software<i
+                <span class="card-title activator blue-text"><b>Native App</b> &nbsp;| City Mapping Software<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
-                  For Linux systems
+                  For Linux/Unix (tap/click to see more).
                 </p>
               </div>
               <div class="card-reveal">
