Fix about me section

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <br>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven <span style="font-weight: bold;">computer engineer</span> with a curious mind and a passion for solving complex real-world problems. Known for my innovative approach and quick adaptability, I thrive in dynamic environments, consistently delivering creative and effective solutions.</h5>
+              <h5>Self-driven <span style="font-weight: bold;">computer engineer</span> with a curious mind and a passion for solving real-world problems through technology. I thrive in dynamic environments, consistently delivering creative and effective solutions.</h5>
             </div>
             <br>
             <div class="social">
@@ -232,10 +232,12 @@
           </h2>
         </blockquote>        
         <p>
-          I am graduating from the University of Toronto in June 2024 with a <b>BASc in Computer Engineering</b> and a <b>minor in Artificial Intelligence</b>. My skills include AI/ML, C/C++/C#, Python, SQL, Flask, .NET, Azure, HTML/CSS, JavaScript, computer networks, and computer security. During my 16-month co-op at Environment and Climate Change Canada, I developed secure web applications using C#, JavaScript, ASP.NET, Blazor, and Azure. </p>
-          <p>
-            I am passionate about solving real-world problems through technology, focusing on AI, software development, and cybersecurity.         </p>
-          </p>
+          I am graduating from the University of Toronto in June 2024 with a <b>BASc in Computer Engineering</b> and a <b>minor in Artificial Intelligence</b>. 
+          My background spans software and hardware engineering, with expertise in cloud applications, database management, AI/ML, and cybersecurity.
+          <p>Professionally, I served as a .NET Applications Developer at Environment and Climate Change Canada (ECCC), where I built secure, scalable web applications and collaborated on innovative solutions using Agile methodologies.</p> 
+          <p>In academics, my projects have included leveraging large language models (LLM) for financial report analysis, developing games on ARM processors, and developing an event management application as a software lead, showcasing my skills in AI/ML, hardware, software development, and project leadership.</p>
+          
+          <p>I am proficient in multiple programming languages, including C, C++, C#, JavaScript, and Python.</p>
             <p>
           <ul>
             <li><b>Spoken Languages:</b> English (Excellent), French (Very Good), Arabic (Native)</li>
@@ -243,7 +245,7 @@
           
         </p>
         <p>
-          This webpage details my <a class="hoversize" href="#education"><u>education</u></a>, <a class="hoversize" href="#experience"><u>professional experience</u></a>, <a class="hoversize" href="#projects"><u>projects</u></a>, <a class="hoversize" href="#skills"><u>skills</u></a>, and <a class="hoversize" href="#contact"><u>contact information</u></a>.
+          <b>Note:</b> This webpage details my <a class="hoversize" href="#education"><u>education</u></a>, <a class="hoversize" href="#experience"><u>professional experience</u></a>, <a class="hoversize" href="#projects"><u>projects</u></a>, <a class="hoversize" href="#skills"><u>skills</u></a>, and <a class="hoversize" href="#contact"><u>contact information</u></a>.
         </p>
         <p>
           You can also view my <b>resume</b> <a aria-label="Open Carl's resume in a new tab" href="https://karlitto01.github.io/static/resume/Carl_Maalouli_Resume.pdf" target="_blank"
@@ -888,6 +890,9 @@
       </a>
     </p>
     <br />
+  </div>
+  <div class="back-to-top-container">
+    <a href="#intro" class="back-to-top hoversize"><u>Back to top</u></a>
   </div>
 </section>
 
